tests/baselines/reference/asyncFunctionDeclaration12_es6.errors.txt
tests/cases/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration12_es6.ts(1,24): error TS1005: '(' expected.
tests/cases/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration12_es6.ts(1,29): error TS1005: '=' expected.
tests/cases/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration12_es6.ts(1,47): error TS1005: '=>' expected.
tests/cases/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration12_es6.ts(1,15): error TS1057: An async function or method must have a valid awaitable return type.
tests/cases/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration12_es6.ts(1,33): error TS2355: A function whose declared type is neither 'void' nor 'any' must return a value or consist of a single 'throw' statement.


==== tests/cases/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration12_es6.ts (5 errors) ====
    var v = async function await(): Promise<void> { }
                           ~~~~~
!!! error TS1005: '(' expected.
                                ~
!!! error TS1005: '=' expected.
                                                  ~
!!! error TS1005: '=>' expected.
                  ~~~~~~~~
!!! error TS1057: An async function or method must have a valid awaitable return type.
                                    ~~~~~~~~~~~~~
!!! error TS2355: A function whose declared type is neither 'void' nor 'any' must return a value or consist of a single 'throw' statement.